--- a/wcag21-pt-PT.html
+++ b/wcag21-pt-PT.html
@@ -1244,7 +1244,7 @@
 
 	<dl>
 		<dt>Descartável</dt>
-    	<dd>Está disponível um <a href="#dfn-mechanism" class="internalDFN" data-link-type="dfn">mecanismo</a> para descartar o conteúdo adicional sem que para isso seja necessário mover o apontador sobre ou o foco do teclado, a não ser que o conteúdo adicional comunique um <a href="#dfn-input-error" class="internalDFN" data-link-type="dfn">erro de entrada</a> ou não oculte ou substitua outro conteúdo;</dd>
+    	<dd>Está disponível um <a href="#dfn-mechanism" class="internalDFN" data-link-type="dfn">mecanismo</a> para descartar o conteúdo adicional sem que para isso seja necessário mover o apontador sobre, ou o foco do teclado, a não ser que o conteúdo adicional comunique um <a href="#dfn-input-error" class="internalDFN" data-link-type="dfn">erro de entrada</a> ou não oculte ou substitua outro conteúdo;</dd>
     	<dt>Flutuante</dt>
     	<dd>Se o apontador sobre pode despoletar o conteúdo adicional então o apontador pode ser movido sobre o conteúdo adicional sem que este desapareça;</dd>
     	<dt>Persistente</dt>
