--- a/wcag21-pt-PT.html
+++ b/wcag21-pt-PT.html
@@ -1126,7 +1126,7 @@
 		<dl>
 			<dt>Texto Grande</dt>
 			<dd>
-				<p>O texto em <a href="#dfn-large-scale" class="internalDFN" data-link-type="dfn">tamanho grande</a> e as imagens de texto em temanho grande têm um rácio de contraste de, pelo menos, 4.5:1;</p>
+				<p>O texto em <a href="#dfn-large-scale" class="internalDFN" data-link-type="dfn">tamanho grande</a> e as imagens de texto em tamanho grande têm um rácio de contraste de, pelo menos, 4.5:1;</p>
 			</dd>
 			<dt>Texto em plano secundário</dt>
 			<dd>
