--- a/wcag21-pt-PT.html
+++ b/wcag21-pt-PT.html
@@ -560,7 +560,7 @@
 						<li class="tocline"><a href="#visual-presentation" class="tocxref"><span class="secno">1.4.8 </span>Apresentação Visual </a></li>
 						<li class="tocline"><a href="#images-of-text-no-exception" class="tocxref"><span class="secno">1.4.9 </span>Imagens de Texto (sem Exceção)</a></li>
 						<li class="tocline"><a href="#reflow" class="tocxref"><span class="secno">1.4.10 </span>Realinhar</a></li>
-						<li class="tocline"><a href="#non-text-contrast" class="tocxref"><span class="secno">1.4.11 </span>Contraste não textual</a></li>
+						<li class="tocline"><a href="#non-text-contrast" class="tocxref"><span class="secno">1.4.11 </span>Contraste de conteúdo não textual</a></li>
 						<li class="tocline"><a href="#text-spacing" class="tocxref"><span class="secno">1.4.12 </span>Espaçamento de Texto</a></li>
 						<li class="tocline"><a href="#content-on-hover-or-focus" class="tocxref"><span class="secno">1.4.13 </span>Conteúdo <em xml:lang="en" lang="en">on Hover</em> ou Foco</a></li>
 					</ol>
@@ -1203,7 +1203,7 @@
 
 <section class="sc new" id="non-text-contrast">
 
-	<h4 id="x1-4-11-non-text-contrast"><span class="secno">Critério de Sucesso 1.4.11 </span>Contraste não textual<span class="permalink"><a href="#non-text-contrast" aria-label="Permalink para o 1.4.11 Contraste não textual" title="Permalink para o 1.4.11 Contraste não textual"><span>§</span></a></span></h4>
+	<h4 id="x1-4-11-non-text-contrast"><span class="secno">Critério de Sucesso 1.4.11 </span>Contraste de conteúdo não textual<span class="permalink"><a href="#non-text-contrast" aria-label="Permalink para o 1.4.11 Contraste de conteúdo não textual" title="Permalink para o 1.4.11 Contraste de conteúdo não textual"><span>§</span></a></span></h4>
 
 	<div class="doclinks"><a href="https://www.w3.org/WAI/WCAG21/Understanding/non-text-contrast.html">Compreendendo Contraste não textual</a> <span class="screenreader">|</span> <br><a href="https://www.w3.org/WAI/WCAG21/quickref/#non-text-contrast">Como satisfazer Contraste não textual</a></div><p class="conformance-level">(Nível AA)</p>
 
