--- a/wcag21-pt-PT.html
+++ b/wcag21-pt-PT.html
@@ -1212,7 +1212,7 @@
 	<dt>Componentes da Interface de Utilizador</dt>
 	<dd>Informação visual necessária para identificar as <a href="#dfn-user-interface-components" class="internalDFN" data-link-type="dfn">componentes da interface de utilizador</a> e dos <a href="#dfn-states" class="internalDFN" data-link-type="dfn">estados</a>, exceto para as componentes inativas ou onde a aparência da componente é determinada pelo agente de utilizador e não modificada pelo autor;</dd>
 	<dt>Objetos Gráficos</dt>
-	<dd>As Partes de gráficos necessários à compreensão do conteúdo, exceto quando é <a href="#dfn-essential" class="internalDFN" data-link-type="dfn">essencial</a> uma apresentação gráfica particular para transmitir a informação.</dd>
+	<dd>As Partes de gráficos necessárias à compreensão do conteúdo, exceto quando é <a href="#dfn-essential" class="internalDFN" data-link-type="dfn">essencial</a> uma apresentação gráfica particular para transmitir a informação.</dd>
 </dl>
 </section>
 
