--- a/wcag21-pt-PT.html
+++ b/wcag21-pt-PT.html
@@ -1637,7 +1637,7 @@
 
 		<div class="doclinks"><a href="https://www.w3.org/WAI/WCAG21/Understanding/target-size.html">Compreendendo Tamanho do Alvo</a><span class="screenreader">|</span><br><a href="https://www.w3.org/WAI/WCAG21/quickref/#target-size">Como satisfazer Tamanho do Alvo</a></div><p class="conformance-level">(Level AAA)</p>
 
-		<p>O tamanho do <a href="#dfn-target" class="internalDFN" data-link-type="dfn">alvo</a> para as <a href="#dfn-pointer-inputs" class="internalDFN" data-link-type="dfn">entradas de apontador</a> são de, pelo menos, 44 por 44 <a href="#dfn-css-pixels" class="internalDFN" data-link-type="dfn">píxeis CSS</a> exceto quando:</p>
+		<p>O tamanho do <a href="#dfn-target" class="internalDFN" data-link-type="dfn">alvo</a> para as <a href="#dfn-pointer-inputs" class="internalDFN" data-link-type="dfn">entradas de apontador</a> é de, pelo menos, 44 por 44 <a href="#dfn-css-pixels" class="internalDFN" data-link-type="dfn">píxeis CSS</a> exceto quando:</p>
 
 		<dl>
 			<dt>Equivalente</dt><dd>O alvo está disponível através de uma hiperligação equivalente ou controlo na mesma página que tem, pelo menos, 44 por 44 píxeis CSS;</dd>
